objects/Privacy_Intervals__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Intervals to send privacy emails in hours</description>
    <fields>
        <fullName>CSRReminderInterval__c</fullName>
        <description>The number of hours between reminder emails sent to the CSR for privacy cases</description>
        <label>CSRReminderInterval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseEscalationHours__c</fullName>
        <description>The Number of Hours after confirmation that can pass until the privacy case is escalated</description>
        <label>CaseEscalationTime</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxAfterConfirm__c</fullName>
        <description>The maximum number of hours that a privacy case can be open before resolution</description>
        <label>MaxAfterConfirm</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxBeforeConfirm__c</fullName>
        <description>The maximum number of hours the user has to confirm their request before it is auto-closed</description>
        <label>MaxBeforeConfirm</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hardCloseHours__c</fullName>
        <description>Hours after resolving a privacy case that a case must be closed</description>
        <label>hardCloseHours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maxDataOwnerTime__c</fullName>
        <description>The amount of hours that the data owner has to complete their privacy task</description>
        <label>maxDataOwnerTime</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maxStalledHours__c</fullName>
        <description>The Maximum Number of Hours that a case may be stalled in waiting for consumer response from CSR follow-up before automatically being closed</description>
        <label>maxStalledHours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>reminderDataOwnerInterval__c</fullName>
        <description>The Number of hours interval that an email reminder is sent to data owners</description>
        <label>reminderDataOwnerInterval</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Privacy Intervals</label>
</CustomObject>